[tool.poetry]
name = "databricker"
version = "0.1.4"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"
click = "^8.1.3"
requests = "^2.28.1"
tomli = "^2.0.1"
PyMonad = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
