[tool.poetry]
name = "databricker"
version = "0.1.20"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]

[tool.poetry.scripts]
infra = "_infra.cli:infra_cli"


[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"
click = "^8.1.3"
requests = "^2.28.1"
tomli = "^2.0.1"
PyMonad = "^2.4.0"
tomli-w = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests-mock = "^1.10.0"
pytest-mock = "^3.8.2"
databricks-cli = "^0.17.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
